--- a/src/main/resources/webapp/bus/admin/index.html
+++ b/src/main/resources/webapp/bus/admin/index.html
@@ -4,10 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="renderer" content="webkit"><title>通勤车安全乘坐管理平台</title>
-    
-
-    <link rel="stylesheet" href="/bus/admin/static/pkg/all_f475e42.css" />
+    <meta name="renderer" content="webkit"><title>通勤车安全乘坐管理平台</title>    
+    <link rel="stylesheet" href="/admin/static/pkg/all.css" />
     <style>
         .admin-nav ul {
             display: none;
@@ -20,44 +18,42 @@
     <div class="admin" ><div  v-transition="slide" v-component="{{currentView}}"></div>
     </div>
     <c-loading show="{{loading}}"></c-loading>
-</div>
-
-<script src="/bus/admin/static/js/mod.js"></script>
+</div><script src="/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
-      "url": "/bus/admin/static/component_modules/vue.js",
+      "url": "/admin/static/component_modules/vue.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/director": {
-      "url": "/bus/admin/static/component_modules/director.js",
+      "url": "/admin/static/component_modules/director.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/iscroll-zoom": {
-      "url": "/bus/admin/static/component_modules/iscroll-zoom.js",
+      "url": "/admin/static/component_modules/iscroll-zoom.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/jquery.min": {
-      "url": "/bus/admin/static/component_modules/jquery.min.js",
+      "url": "/admin/static/component_modules/jquery.min.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/marked": {
-      "url": "/bus/admin/static/component_modules/marked.js",
+      "url": "/admin/static/component_modules/marked.js",
       "type": "js",
       "pkg": "p0"
     },
     "main/service": {
-      "url": "/bus/admin/static/components/component/main/service.js",
+      "url": "/admin/static/components/component/main/service.js",
       "type": "js",
       "pkg": "p2"
     },
     "loading/loading": {
-      "url": "/bus/admin/static/components/component/loading/loading.js",
+      "url": "/admin/static/components/component/loading/loading.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -65,12 +61,21 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/check": {
-      "url": "/bus/admin/static/components/component/main/check.js",
+      "url": "/admin/static/components/component/main/check.js",
       "type": "js",
       "pkg": "p2"
     },
+    "components/page/desk/desk": {
+      "url": "/admin/static/components/page/desk/desk.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ],
+      "pkg": "p2"
+    },
     "nav/nav": {
-      "url": "/bus/admin/static/components/component/nav/nav.js",
+      "url": "/admin/static/components/component/nav/nav.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -78,118 +83,44 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/main": {
-      "url": "/bus/admin/static/components/component/main/main.js",
+      "url": "/admin/static/components/component/main/main.js",
       "type": "js",
       "deps": [
+        "component_modules/vue",
         "component_modules/director",
+        "components/page/desk/desk",
         "main/service",
         "loading/loading",
         "nav/nav"
       ],
       "pkg": "p2"
     },
+    "main/pintuer": {
+      "url": "/admin/static/components/component/main/pintuer.js",
+      "type": "js",
+      "pkg": "p2"
+    },
     "pager/pager": {
-      "url": "/bus/admin/static/components/component/pager/pager.js",
+      "url": "/admin/static/components/component/pager/pager.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
       ],
       "pkg": "p2"
     },
-    "components/page/user/user": {
-      "url": "/bus/admin/static/components/page/user/user.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "main/check",
-        "pager/pager"
-      ],
-      "pkg": "p2"
-    },
     "components/page/bus/bus": {
-      "url": "/bus/admin/static/components/page/bus/bus.js",
+      "url": "/admin/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
         "main/check",
         "pager/pager"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/order/order": {
-      "url": "/bus/admin/static/components/page/order/order.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/desk/desk": {
-      "url": "/bus/admin/static/components/page/desk/desk.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/company/company": {
-      "url": "/bus/admin/static/components/page/company/company.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "main/check",
-        "pager/pager"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/companyOrder/ticketsStats/ticketsStats": {
-      "url": "/bus/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/companyOrder/busSeat/busSeat": {
-      "url": "/bus/admin/static/components/page/companyOrder/busSeat/busSeat.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "main/check",
-        "component_modules/iscroll-zoom"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/companyOrder/companyOrder": {
-      "url": "/bus/admin/static/components/page/companyOrder/companyOrder.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service",
-        "main/check",
-        "components/page/companyOrder/ticketsStats/ticketsStats",
-        "components/page/companyOrder/busSeat/busSeat"
-      ],
-      "pkg": "p2"
-    },
-    "components/page/check/ticketsStats/ticketsStats": {
-      "url": "/bus/admin/static/components/page/check/ticketsStats/ticketsStats.js",
-      "type": "js",
-      "deps": [
-        "component_modules/vue",
-        "main/service"
       ],
       "pkg": "p2"
     },
     "components/page/check/busSeat/busSeat": {
-      "url": "/bus/admin/static/components/page/check/busSeat/busSeat.js",
+      "url": "/admin/static/components/page/check/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -199,8 +130,17 @@ require.resourceMap({
       ],
       "pkg": "p2"
     },
+    "components/page/check/ticketsStats/ticketsStats": {
+      "url": "/admin/static/components/page/check/ticketsStats/ticketsStats.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ],
+      "pkg": "p2"
+    },
     "components/page/check/check": {
-      "url": "/bus/admin/static/components/page/check/check.js",
+      "url": "/admin/static/components/page/check/check.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -211,18 +151,51 @@ require.resourceMap({
       ],
       "pkg": "p2"
     },
-    "components/page/seat/seat": {
-      "url": "/bus/admin/static/components/page/seat/seat.js",
+    "components/page/company/company": {
+      "url": "/admin/static/components/page/company/company.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
         "main/service",
-        "main/check"
+        "main/check",
+        "pager/pager"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/companyOrder/busSeat/busSeat": {
+      "url": "/admin/static/components/page/companyOrder/busSeat/busSeat.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "main/check",
+        "component_modules/iscroll-zoom"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/companyOrder/ticketsStats/ticketsStats": {
+      "url": "/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/companyOrder/companyOrder": {
+      "url": "/admin/static/components/page/companyOrder/companyOrder.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "main/check",
+        "components/page/companyOrder/ticketsStats/ticketsStats",
+        "components/page/companyOrder/busSeat/busSeat"
       ],
       "pkg": "p2"
     },
     "components/page/history/history": {
-      "url": "/bus/admin/static/components/page/history/history.js",
+      "url": "/admin/static/components/page/history/history.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -231,8 +204,16 @@ require.resourceMap({
       ],
       "pkg": "p2"
     },
-    "components/page/system/config": {
-      "url": "/bus/admin/static/components/page/system/config.js",
+    "components/page/home/home": {
+      "url": "/admin/static/components/page/home/home.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/order/order": {
+      "url": "/admin/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -240,37 +221,54 @@ require.resourceMap({
       ],
       "pkg": "p2"
     },
-    "main/pintuer": {
-      "url": "/bus/admin/static/components/component/main/pintuer.js",
-      "type": "js",
-      "pkg": "p2"
-    },
-    "components/page/home/home": {
-      "url": "/bus/admin/static/components/page/home/home.js",
+    "components/page/seat/seat": {
+      "url": "/admin/static/components/page/seat/seat.js",
       "type": "js",
       "deps": [
-        "component_modules/vue"
+        "component_modules/vue",
+        "main/service",
+        "main/check"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/system/config": {
+      "url": "/admin/static/components/page/system/config.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ],
+      "pkg": "p2"
+    },
+    "components/page/user/user": {
+      "url": "/admin/static/components/page/user/user.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "main/check",
+        "pager/pager"
       ],
       "pkg": "p2"
     }
   },
   "pkg": {
     "p0": {
-      "url": "/bus/admin/static/pkg/common_cd80228.js",
+      "url": "/admin/static/pkg/common_e507ddc.js",
       "type": "js"
     },
     "p2": {
-      "url": "/bus/admin/static/pkg/app_beadb80.js",
+      "url": "/admin/static/pkg/app_7db8f0d.js",
       "type": "js"
     }
   }
 });</script>
-<script src="/bus/admin/static/js/jquery.min.js"></script>
-<script src="/bus/admin/static/js/respond.js"></script>
-<script src="/bus/admin/static/js/lrz.pc.min.js"></script>
-<script src="/bus/admin/static/js/laydate/laydate.js"></script>
-<script type="text/javascript" src="/bus/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
-<script language="javascript" type="text/javascript" src="/bus/admin/static/js/date97/WdatePicker.js"></script>
+<script src="/admin/static/js/jquery.min.js"></script>
+<script src="/admin/static/js/respond.js"></script>
+<script src="/admin/static/js/lrz.pc.min.js"></script>
+<script src="/admin/static/js/laydate/laydate.js"></script>
+<script type="text/javascript" src="/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
+<script language="javascript" type="text/javascript" src="/admin/static/js/date97/WdatePicker.js"></script>
 <script type="text/javascript">
 
     var CONFIG = {
