--- a/src/main/resources/webapp/bus/admin/index.html
+++ b/src/main/resources/webapp/bus/admin/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="renderer" content="webkit"><title>通勤车安全乘坐管理平台</title>    
-    <link rel="stylesheet" href="/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="/bus/admin/static/pkg/all.css" />
     <style>
         .admin-nav ul {
             display: none;
@@ -18,42 +18,42 @@
     <div class="admin" ><div  v-transition="slide" v-component="{{currentView}}"></div>
     </div>
     <c-loading show="{{loading}}"></c-loading>
-</div><script src="/admin/static/js/mod.js"></script>
+</div><script src="/bus/admin/static/js/mod.js"></script>
 <script>/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
-      "url": "/admin/static/component_modules/vue.js",
+      "url": "/bus/admin/static/component_modules/vue.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/director": {
-      "url": "/admin/static/component_modules/director.js",
+      "url": "/bus/admin/static/component_modules/director.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/iscroll-zoom": {
-      "url": "/admin/static/component_modules/iscroll-zoom.js",
+      "url": "/bus/admin/static/component_modules/iscroll-zoom.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/jquery.min": {
-      "url": "/admin/static/component_modules/jquery.min.js",
+      "url": "/bus/admin/static/component_modules/jquery.min.js",
       "type": "js",
       "pkg": "p0"
     },
     "component_modules/marked": {
-      "url": "/admin/static/component_modules/marked.js",
+      "url": "/bus/admin/static/component_modules/marked.js",
       "type": "js",
       "pkg": "p0"
     },
     "main/service": {
-      "url": "/admin/static/components/component/main/service.js",
+      "url": "/bus/admin/static/components/component/main/service.js",
       "type": "js",
       "pkg": "p2"
     },
     "loading/loading": {
-      "url": "/admin/static/components/component/loading/loading.js",
+      "url": "/bus/admin/static/components/component/loading/loading.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -61,12 +61,12 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/check": {
-      "url": "/admin/static/components/component/main/check.js",
+      "url": "/bus/admin/static/components/component/main/check.js",
       "type": "js",
       "pkg": "p2"
     },
     "components/page/desk/desk": {
-      "url": "/admin/static/components/page/desk/desk.js",
+      "url": "/bus/admin/static/components/page/desk/desk.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -75,7 +75,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "nav/nav": {
-      "url": "/admin/static/components/component/nav/nav.js",
+      "url": "/bus/admin/static/components/component/nav/nav.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -83,7 +83,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/main": {
-      "url": "/admin/static/components/component/main/main.js",
+      "url": "/bus/admin/static/components/component/main/main.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -96,12 +96,12 @@ require.resourceMap({
       "pkg": "p2"
     },
     "main/pintuer": {
-      "url": "/admin/static/components/component/main/pintuer.js",
+      "url": "/bus/admin/static/components/component/main/pintuer.js",
       "type": "js",
       "pkg": "p2"
     },
     "pager/pager": {
-      "url": "/admin/static/components/component/pager/pager.js",
+      "url": "/bus/admin/static/components/component/pager/pager.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -109,7 +109,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/bus/bus": {
-      "url": "/admin/static/components/page/bus/bus.js",
+      "url": "/bus/admin/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -120,7 +120,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/busSeat/busSeat": {
-      "url": "/admin/static/components/page/check/busSeat/busSeat.js",
+      "url": "/bus/admin/static/components/page/check/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -131,7 +131,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/ticketsStats/ticketsStats": {
-      "url": "/admin/static/components/page/check/ticketsStats/ticketsStats.js",
+      "url": "/bus/admin/static/components/page/check/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -140,7 +140,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/check/check": {
-      "url": "/admin/static/components/page/check/check.js",
+      "url": "/bus/admin/static/components/page/check/check.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -152,7 +152,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/company/company": {
-      "url": "/admin/static/components/page/company/company.js",
+      "url": "/bus/admin/static/components/page/company/company.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -163,7 +163,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/busSeat/busSeat": {
-      "url": "/admin/static/components/page/companyOrder/busSeat/busSeat.js",
+      "url": "/bus/admin/static/components/page/companyOrder/busSeat/busSeat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -174,7 +174,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/ticketsStats/ticketsStats": {
-      "url": "/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
+      "url": "/bus/admin/static/components/page/companyOrder/ticketsStats/ticketsStats.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -183,7 +183,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/companyOrder/companyOrder": {
-      "url": "/admin/static/components/page/companyOrder/companyOrder.js",
+      "url": "/bus/admin/static/components/page/companyOrder/companyOrder.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -195,7 +195,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/history/history": {
-      "url": "/admin/static/components/page/history/history.js",
+      "url": "/bus/admin/static/components/page/history/history.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -205,7 +205,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/home/home": {
-      "url": "/admin/static/components/page/home/home.js",
+      "url": "/bus/admin/static/components/page/home/home.js",
       "type": "js",
       "deps": [
         "component_modules/vue"
@@ -213,7 +213,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/order/order": {
-      "url": "/admin/static/components/page/order/order.js",
+      "url": "/bus/admin/static/components/page/order/order.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -222,7 +222,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/seat/seat": {
-      "url": "/admin/static/components/page/seat/seat.js",
+      "url": "/bus/admin/static/components/page/seat/seat.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -232,7 +232,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/system/config": {
-      "url": "/admin/static/components/page/system/config.js",
+      "url": "/bus/admin/static/components/page/system/config.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -241,7 +241,7 @@ require.resourceMap({
       "pkg": "p2"
     },
     "components/page/user/user": {
-      "url": "/admin/static/components/page/user/user.js",
+      "url": "/bus/admin/static/components/page/user/user.js",
       "type": "js",
       "deps": [
         "component_modules/vue",
@@ -254,21 +254,21 @@ require.resourceMap({
   },
   "pkg": {
     "p0": {
-      "url": "/admin/static/pkg/common_e507ddc.js",
+      "url": "/bus/admin/static/pkg/common_e507ddc.js",
       "type": "js"
     },
     "p2": {
-      "url": "/admin/static/pkg/app_7db8f0d.js",
+      "url": "/bus/admin/static/pkg/app_7c0e2a7.js",
       "type": "js"
     }
   }
 });</script>
-<script src="/admin/static/js/jquery.min.js"></script>
-<script src="/admin/static/js/respond.js"></script>
-<script src="/admin/static/js/lrz.pc.min.js"></script>
-<script src="/admin/static/js/laydate/laydate.js"></script>
-<script type="text/javascript" src="/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
-<script language="javascript" type="text/javascript" src="/admin/static/js/date97/WdatePicker.js"></script>
+<script src="/bus/admin/static/js/jquery.min.js"></script>
+<script src="/bus/admin/static/js/respond.js"></script>
+<script src="/bus/admin/static/js/lrz.pc.min.js"></script>
+<script src="/bus/admin/static/js/laydate/laydate.js"></script>
+<script type="text/javascript" src="/bus/admin/static/js/ztree/js/jquery.ztree.all-3.5.js"></script>
+<script language="javascript" type="text/javascript" src="/bus/admin/static/js/date97/WdatePicker.js"></script>
 <script type="text/javascript">
 
     var CONFIG = {
